--- a/UnitConverter/Base.lproj/Main.storyboard
+++ b/UnitConverter/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,72 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zxK-hU-b9G">
+                                <rect key="frame" x="0.0" y="197" width="291" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="bcm-oZ-9DV">
+                                <rect key="frame" x="0.0" y="248" width="375" height="29"/>
+                                <segments>
+                                    <segment title="feet"/>
+                                    <segment title="yards"/>
+                                    <segment title="miles"/>
+                                </segments>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click Update for the Answer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qFD-ne-KCA">
+                                <rect key="frame" x="80" y="323" width="214" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UMs-0o-heQ">
+                                <rect key="frame" x="162" y="285" width="51" height="30"/>
+                                <state key="normal" title="Update"/>
+                                <connections>
+                                    <action selector="updateButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5mG-AH-gYs"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="in inches" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="esP-zw-ixl">
+                                <rect key="frame" x="299" y="202" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="UMs-0o-heQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1oQ-tt-qkC"/>
+                            <constraint firstItem="qFD-ne-KCA" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="5cd-Ey-oTy"/>
+                            <constraint firstItem="UMs-0o-heQ" firstAttribute="top" secondItem="bcm-oZ-9DV" secondAttribute="bottom" constant="9" id="a4r-XD-hNP"/>
+                            <constraint firstItem="bcm-oZ-9DV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="aD7-gA-CGt"/>
+                            <constraint firstItem="esP-zw-ixl" firstAttribute="leading" secondItem="zxK-hU-b9G" secondAttribute="trailing" constant="8" id="bO2-AG-fAN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bcm-oZ-9DV" secondAttribute="trailing" id="dV4-JU-FPt"/>
+                            <constraint firstItem="zxK-hU-b9G" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gk0-JU-V0P"/>
+                            <constraint firstItem="qFD-ne-KCA" firstAttribute="top" secondItem="UMs-0o-heQ" secondAttribute="bottom" constant="8" id="jqG-Hl-JRx"/>
+                            <constraint firstItem="bcm-oZ-9DV" firstAttribute="top" secondItem="esP-zw-ixl" secondAttribute="bottom" constant="25" id="qdu-Me-kJa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="esP-zw-ixl" secondAttribute="trailing" constant="8" id="tr1-8q-Qm2"/>
+                            <constraint firstItem="bcm-oZ-9DV" firstAttribute="top" secondItem="zxK-hU-b9G" secondAttribute="bottom" constant="21" id="ySE-eD-tgP"/>
+                            <constraint firstItem="qFD-ne-KCA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zD1-xA-MiX"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="inputField" destination="zxK-hU-b9G" id="C9y-fR-c3b"/>
+                        <outlet property="outputField" destination="esP-zw-ixl" id="sPd-gk-oAj"/>
+                        <outlet property="outputLableField" destination="qFD-ne-KCA" id="4k2-b9-oGE"/>
+                        <outlet property="segmenController" destination="bcm-oZ-9DV" id="30z-B6-yOT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-76" y="132.68365817091455"/>
         </scene>
     </scenes>
 </document>
